updated navigation bar

--- a/gallery.html
+++ b/gallery.html
@@ -42,9 +42,9 @@
                    <li><a href="gallery.html" class="active">Gallery</a></li>
                    <li><a href="dining.html">Dining</a></li>
                    <li><a href="rooms.html">Rooms</a></li>
-                   <li><a href="booking.html">Booking</a></li>
-                   <li><a href="index.html">Home</a></li>
-                   
+                   <li><a href="booking.php">Booking</a></li>
+                   <li><a href="index.php">Home</a></li>
+
                  </ul>
 					</nav>
         </div>
