minor bug fixes

--- a/gallery.html
+++ b/gallery.html
@@ -36,7 +36,7 @@
     <div class="header">
   		<div class="container">
   			<div class="site-name-container">
-          <a href="index.html" class="site-name">The Palms Colombo</a>
+          <a href="index.php" class="site-name">The Palms Colombo</a>
   				<nav class="nav">
 					       <ul>
                    <li><a href="gallery.html" class="active">Gallery</a></li>
